Added QR code scanning

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="senokt16.gmail.com.virtualbusinesscard.views.MainActivity" />
         </activity>
+        <activity android:name=".views.ScanActivity" />
     </application>
 
 </manifest>
