--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,8 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 
     compile 'com.journeyapps:zxing-android-embedded:3.3.0@aar'
+
+    compile "android.arch.persistence.room:runtime:1.0.0"
+    annotationProcessor "android.arch.persistence.room:compiler:1.0.0"
+    compile 'com.google.code.gson:gson:2.8.0'
 }
