--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,11 @@
 apply plugin: 'com.android.application'
 
+repositories{
+    maven {
+        url 'http://dl.bintray.com/amulyakhare/maven'
+    }
+}
+
 android {
     compileSdkVersion 26
     defaultConfig {
@@ -26,13 +32,16 @@ dependencies {
     implementation 'com.android.support:support-v4:26.1.0'
     implementation 'com.android.support:cardview-v7:26.1.0'
     implementation 'com.google.zxing:core:3.3.1'
+    implementation 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
+
     testImplementation 'junit:junit:4.12'
+
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 
     compile 'com.journeyapps:zxing-android-embedded:3.3.0@aar'
-
-    compile "android.arch.persistence.room:runtime:1.0.0"
-    annotationProcessor "android.arch.persistence.room:compiler:1.0.0"
     compile 'com.google.code.gson:gson:2.8.0'
+    compile "android.arch.persistence.room:runtime:1.0.0"
+
+    annotationProcessor "android.arch.persistence.room:compiler:1.0.0"
 }
